--- a/Services/Catalog/Course.Services.Catalog/CourseSales.Services.Catalog.csproj
+++ b/Services/Catalog/Course.Services.Catalog/CourseSales.Services.Catalog.csproj
@@ -11,11 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Shared\Course.Shared\Course.Shared.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Course.Shared\CourseSales.Shared.csproj" />
   </ItemGroup>
 
 </Project>
